minor ie8 fixes: fix conditional statement to not include jq2 and remove negative margin on article body to not overlap article title

--- a/src/documents/styles/site-ie8.css.less
+++ b/src/documents/styles/site-ie8.css.less
@@ -995,7 +995,7 @@ body.article #main {
     font-family: Plantin, Georgia, serif;
     font-size: 62.5%;
     max-width: 1200px;
-    margin: -130px auto 80px;
+    margin: 0 auto 80px;
     background: white;
     padding: 100px 0 60px;
     box-sizing: border-box;
